# jobs-searcher

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  .prettierrc  BUILD.bazel  Cargo.toml  MODULE.bazel  README.bazel.md  README.md  eslint.config.js  eslint.config.mjs  gazelle_python.yaml  go.mod  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  skaffold.yaml  tsconfig.base.json
.aspect/cli/: config.yaml  package-json-scripts.star
.github/workflows/: ci.yml
apps/api-gateway/: Dockerfile.local  eslint.config.mjs  nodemon.json  project.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  webpack.config.js
apps/api-gateway/src/: main.ts
apps/api-gateway/src/app/: app.controller.spec.ts
apps/frontend/: Dockerfile.local  eslint.config.js  eslint.config.mjs  next.config.js  nodemon.json  tsconfig.json  tsconfig.spec.json
apps/frontend-e2e/: eslint.config.mjs
apps/frontend/src/app/: page.tsx
apps/ts/frontend/: BUILD.bazel  README.md  defs.bzl  index.html  jest.config.ts  package.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vite.config.ts  vitest.bzl
apps/ts/frontend/src/: BUILD.bazel  index.tsx
apps/ts/frontend/src/app/: app.component.spec.tsx  app.component.tsx
infra/k8s/: api-gateway-deployment.yaml  api-gateway-service.yaml  configmap-local.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  nginx-service.yaml  postgres-deployment.yaml  postgres-service.yaml  redis-deployment.yaml
infra/nginx/: Dockerfile  nginx.conf
requirements/: all.txt
tools/format/: BUILD.bazel
tools/lint/: linters.bzl
