# gazelle:exclude app

load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load(
    "//apps/ts/frontend:defs.bzl",
    "APP_TRANSPILER",
    "ASSET_PATTERNS",
    "SPEC_TRANSPILER",
    "SRC_PATTERNS",
    "TEST_PATTERNS",
)
load("//tools/lint:linters.bzl", "eslint_test")

js_library(
    name = "assets",
    srcs = glob(ASSET_PATTERNS),
    visibility = ["//apps/ts/frontend:__subpackages__"],
)

ts_project(
    name = "src",
    srcs = glob(
        include = SRC_PATTERNS,
        allow_empty = True,
        exclude = TEST_PATTERNS,
    ),
    data = [":assets"],
    declaration = True,
    resolve_json_module = True,
    source_map = True,
    transpiler = APP_TRANSPILER,
    tsconfig = "//apps/ts/frontend:app_tsconfig",  # keep
    visibility = ["//apps/ts/frontend:__subpackages__"],
    deps = [
        "//apps/ts/frontend:node_modules/@types/react",
        "//apps/ts/frontend:node_modules/@types/react-dom",
        "//apps/ts/frontend:node_modules/react",
        "//apps/ts/frontend:node_modules/react-dom",
        "//apps/ts/frontend:node_modules/vite-plugin-svgr",
        "//apps/ts/frontend:node_modules/web-vitals",

        # "//apps/ts/frontend:node_modules/@testing-library/react",
        # "//apps/ts/frontend:node_modules/vitest",
    ],
)

ts_project(
    name = "test_lib",
    srcs = glob(
        TEST_PATTERNS,
        allow_empty = True,
    ),
    declaration = True,
    resolve_json_module = True,
    source_map = True,
    transpiler = SPEC_TRANSPILER,
    tsconfig = "//apps/ts/frontend:spec_tsconfig",  # keep
    visibility = ["//apps/ts/frontend:__subpackages__"],
    deps = [
        ":src",
        "//:node_modules/@types/jest",
        "//apps/ts/frontend:node_modules/@testing-library/jest-dom",
        "//apps/ts/frontend:node_modules/@testing-library/react",
        "//apps/ts/frontend:node_modules/jsdom",
        "//apps/ts/frontend:node_modules/vitest",
        "//apps/ts/frontend:vite.config",
    ],
)
